Checking Fix2 for Spacing bottom of header

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
   display: flex;
   flex-direction: column;
   background: #f3f3f3;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   overflow: hidden;
 }
 
